--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,39 @@
         tools:context=".presenter.main.MainActivity">
 
 
-    <android.support.v7.widget.RecyclerView
-            android:layout_width="0dp"
-            android:id="@+id/rvFruitList"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:listitem="@layout/fruit_list_item"/>
+	<android.support.design.widget.FloatingActionButton
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:clickable="true"
+			android:foreground="?android:attr/selectableItemBackground"
+			android:focusable="true"
+			android:background="@color/colorPrimary"
+			app:srcCompat="@drawable/ic_action_add"
+			android:id="@+id/fab"
+			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
+			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
+			app:backgroundTint="@color/colorAccent"/>
+	<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+	          android:id="@+id/tvNoDataInfo" android:text="No data"
+	          android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="18sp"
+	          android:gravity="center_horizontal" app:layout_constraintTop_toTopOf="parent"
+	          android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+	          android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+	          android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent" android:visibility="gone"/>
+	<android.support.v4.widget.SwipeRefreshLayout
+			android:id="@+id/refresh"
+			android:layout_width="match_parent"
+			android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent">
+		<android.support.v7.widget.RecyclerView
+				android:layout_width="0dp"
+				android:id="@+id/rvFruitList"
+				android:layout_height="wrap_content"
+				app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				tools:listitem="@layout/fruit_list_item" android:visibility="gone"/>
+	</android.support.v4.widget.SwipeRefreshLayout>
+
 </android.support.constraint.ConstraintLayout>
