--- a/app/src/main/res/layout/fragment_fruit_edit.xml
+++ b/app/src/main/res/layout/fragment_fruit_edit.xml
@@ -51,4 +51,12 @@
 			android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
 			app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
 			android:layout_marginStart="8dp"/>
+	<Button
+			android:text="Save"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/btnEdit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+			android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+			app:layout_constraintTop_toBottomOf="@+id/chBoxDelicious"/>
 </android.support.constraint.ConstraintLayout>
