--- a/app/src/main/res/layout/fruit_list_item.xml
+++ b/app/src/main/res/layout/fruit_list_item.xml
@@ -36,5 +36,15 @@
                 android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/tvFruitColor" android:textSize="12sp"
                 tools:text="150"/>
+	    <ImageView
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_edit"
+			    android:id="@+id/ivEdit"
+			    android:padding="4dp"
+			    android:foreground="?android:attr/selectableItemBackground"
+			    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+			    android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent"
+			    android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
+			    android:layout_marginBottom="8dp"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
