--- a/app/src/main/res/layout/fruit_list_item.xml
+++ b/app/src/main/res/layout/fruit_list_item.xml
@@ -7,44 +7,48 @@
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="8dp"
         android:foreground="?android:attr/selectableItemBackground">
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
+	<android.support.constraint.ConstraintLayout
+			android:layout_width="match_parent"
 
-            android:layout_height="wrap_content">
-        <TextView
-                tools:text="Apple"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvFruitName" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
-                android:padding="8dp" android:textStyle="bold"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvFruitColor"
-                app:layout_constraintStart_toEndOf="@+id/tvFruitName"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvFruitName" android:textSize="12sp"
-                tools:text="green"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvFruitWeight"
-                app:layout_constraintStart_toEndOf="@+id/tvFruitColor"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvFruitColor" android:textSize="12sp"
-                tools:text="150"/>
-	    <ImageView
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_edit"
-			    android:id="@+id/ivEdit"
-			    android:padding="4dp"
-			    android:foreground="?android:attr/selectableItemBackground"
-			    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-			    android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent"
-			    android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
-			    android:layout_marginBottom="8dp"/>
-    </android.support.constraint.ConstraintLayout>
+			android:layout_height="wrap_content">
+		<TextView
+				tools:text="Apple"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:id="@+id/tvFruitName" android:layout_marginTop="8dp"
+				app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+				android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+				app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+				android:padding="8dp" android:textStyle="bold"
+				app:layout_constraintEnd_toStartOf="@+id/tvFruitColor"/>
+		<TextView
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:id="@+id/tvFruitColor"
+				app:layout_constraintStart_toEndOf="@+id/tvFruitName"
+				android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+				app:layout_constraintBaseline_toBaselineOf="@+id/tvFruitName" android:textSize="12sp"
+				tools:text="green" app:layout_constraintHorizontal_bias="0.5"
+				app:layout_constraintEnd_toStartOf="@+id/tvFruitWeight"/>
+		<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/tvFruitWeight"
+				app:layout_constraintStart_toEndOf="@+id/tvFruitColor"
+				android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+				app:layout_constraintBaseline_toBaselineOf="@+id/tvFruitColor" android:textSize="12sp"
+				tools:text="150" app:layout_constraintEnd_toStartOf="@+id/ivEdit" android:layout_marginEnd="8dp"
+				android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.5"/>
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_edit"
+				android:id="@+id/ivEdit"
+				android:padding="4dp"
+				android:foreground="?android:attr/selectableItemBackground"
+				app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+				android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent"
+				android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
+				android:layout_marginBottom="8dp"
+		/>
+	</android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
